--- a/package.json
+++ b/package.json
@@ -19,12 +19,17 @@
     "supertest": "^6.2.2"
   },
   "dependencies": {
-    "@vscode/sqlite3": "5.0.7",
     "bcryptjs": "^2.4.3",
+    "connect-session-knex": "^2.1.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "express-session": "^1.17.2",
     "helmet": "^5.0.2",
-    "knex": "^1.0.3"
+    "jsonwebtoken": "^8.5.1",
+    "knex": "0.95.15",
+    "knex-cleaner": "^1.3.1",
+    "sqlite3": "5.0.3"
   },
   "repository": {
     "type": "git",
